<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/t_estudiantes"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/teal_200">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:hint="@string/dni"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/teal_200">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:hint="@string/n_completos"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/teal_200"
            android:text="@string/modalidad"
            android:textSize="18sp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virtual"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presencial"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semipresencial"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/teal_200"
            android:text="@string/fecha"
            android:textSize="18sp"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            android:text="@string/sede"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/spinner2"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            android:text="@string/carrera"
            android:textSize="18sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/spinner3"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <CheckBox
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/condiciones"/>

        <CheckBox
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/publicidad"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="6dp"
                android:text="@string/btn_registrar"
                android:backgroundTint="@color/teal_700"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="6dp"
                android:text="@string/btn_limpiar"
                android:backgroundTint="@color/purple_200"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>