<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:hint="@string/nombre"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:hint="@string/apellidos"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/teal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/correo"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:entries="@array/spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/teal_200"
        app:passwordToggleTint="@color/purple_700">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/contraseña"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/teal_200"
        app:passwordToggleTint="@color/purple_700">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/confirmar"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condiciones"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_registrar"
        android:layout_marginTop="20dp"/>

</LinearLayout>