<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/usuario"/>

        <EditText
            android:id="@+id/edtNameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_completos"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/edtPhoneUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:maxLines="1"
            android:inputType="phone"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/edtEmailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/edtAddressUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:maxLines="1"
            android:inputType="textPostalAddress"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_guardar"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
