<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgAccount"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/baseline_account_circle_24"
            app:tint="@color/tecsup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imgMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/baseline_menu_24"
            app:tint="@color/tecsup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-80dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/btnNewsTecsup"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/tecsup"
                android:text="@string/btn_noticias" />

            <Button
                android:id="@+id/btnCurso"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/btn_cursos" />

            <Button
                android:id="@+id/btnDocente"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/btn_docentes" />

            <Button
                android:id="@+id/btnEstudiante"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/divider"
                android:textColor="@color/secondary_text"
                android:text="@string/btn_estudiantes" />

            <Button
                android:id="@+id/btnNota"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/divider"
                android:textColor="@color/secondary_text"
                android:text="@string/btn_notas" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rotationY="180"
            android:layout_marginBottom="-20dp"
            android:src="@drawable/footer"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imgFooter">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingWeb"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/baseline_web_24"
                app:fabCustomSize="60dp"
                app:tint="@color/white"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingMenu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/baseline_connect_without_contact_24"
                app:fabCustomSize="60dp"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingShared"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/baseline_share_24"
                app:fabCustomSize="60dp"
                app:tint="@color/white"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingPreguntas"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/baseline_question_answer_24"
                app:fabCustomSize="60dp"
                app:tint="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/left_header_main"
        app:itemTextColor="@color/tecsup"
        app:itemIconTint="@color/tecsup"
        app:menu="@menu/left_navigation_menu"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/right_header_main"
        app:menu="@menu/right_navigation_menu"
        app:itemTextColor="@color/purple_200"
        app:itemIconTint="@color/purple_200"/>

</androidx.drawerlayout.widget.DrawerLayout>